# faugus-launcher-rs

./: CLAUDE.md  Cargo.toml  HANDOVER.md  README.md  meson.build  meson_options.txt
.github/workflows/: release-packages.yml
backlog/blueprints/: blueprint-fix-compilation-mvp.md  blueprint-gui-phase1-critical-blockers.md
data/: io.github.Faugus.faugus-launcher.desktop.in  io.github.Faugus.faugus-launcher.proton-manager.desktop.in  io.github.Faugus.faugus-launcher.run.desktop.in  io.github.Faugus.faugus-launcher.shortcut.desktop.in  meson.build
packaging/: io.github.Faugus.faugus-launcher.desktop
scripts/: verify-package.sh
src/: main.rs
src/config/: app_config.rs  game_config.rs  mod.rs  paths.rs
src/gui/: add_game_dialog.rs  confirmation_dialog.rs  context_menu.rs  file_picker.rs  log_viewer_dialog.rs  main_window.rs  mod.rs  proton_manager_dialog.rs  settings_dialog.rs  styles.rs
src/icons/: icon_manager.rs
src/launcher/: game_launcher.rs  launch_controller.rs  mod.rs  wine_tools.rs
src/locale/: i18n.rs
src/proton/: mod.rs  proton_manager.rs  runner_resolver.rs
src/shortcuts/: desktop_entry.rs
src/steam/: shortcuts.rs
src/tray/: icon.rs  menu.rs  mod.rs  tray.rs
src/utils/: components.rs  mod.rs
